Some Firefox layout issues addressed

--- a/webview/webview.css
+++ b/webview/webview.css
@@ -141,7 +141,7 @@ div.req-title {
 }
 div.req-title-edit {
 	width: 32px;
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 }
 div.req-text {
 	width: 252px;
@@ -151,10 +151,10 @@ div.req-text input[type="text"], input[type="url"] {
 	width: 100%;
 }
 div.oreq-name {
-	width: 162px;
+	width: 154px;
 }
 div.oreq-con {
-	width: 92px;
+	width: 100px;
 	text-align: right;
 }
 div.oreq-pri {
@@ -168,9 +168,11 @@ div.oreq-form {
 	margin: 2px 0px;
 	padding: 0px;
 }
+/*
 div.oreq-form input {
 	line-height: 18px;
 }
+*/
 div.oreq-form input[type="number"] {
 	width: 64px;
 	text-align: right;
@@ -265,12 +267,14 @@ input {
     font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     color: #333;
 	font-size: 10pt;
+	border: 1px solid #c0c0c0;
+	padding-left: 2px;
+	/*padding: 2px 1px;*/
 	/*-webkit-appearance: none;*/
 	/*-moz-appearance: none;*/
 }
 input.ng-dirty.ng-invalid {
 	border: 1px solid #CC0000;
-	padding: 2px 1px;
 }
 input.ng-dirty.ng-invalid:focus {
 	box-shadow: 0 0 2px 0px #CC0000;
@@ -283,7 +287,7 @@ input[type="button"] {
     font-weight: 400;
     border: 1px solid #417690;
     line-height: 14px;
-    padding: 1px 4px;
+    padding: 1px 3px;
     cursor: pointer;
 }
 input[type="button"]:active {
@@ -293,11 +297,16 @@ input[type="button"]:active {
 input[type="number"]::-webkit-inner-spin-button {
 	opacity: 1;
 }
+input::-moz-focus-inner {
+	border: 0;
+	padding: 0;
+}
 select {
 	font-size: 10pt;
     font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     background-color: white;
-    padding: 1px;
+    /*padding: 1px;*/
+	border: 1px solid #c0c0c0;
 }
 button {
 	font-size: 10pt;
